--- a/src/layouts/fonts.css
+++ b/src/layouts/fonts.css
@@ -2,40 +2,48 @@
 
 @font-face {
   font-family: 'Suisse Intl';
-  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Regular%20cuts/web%20files/SuisseIntl-Regular-Web/XL/SuisseIntl-Regular-WebXL.woff2") format('woff2'),
-    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Regular%20cuts/web%20files/SuisseIntl-Regular-Web/XL/SuisseIntl-Regular-WebXL.woff") format('woff');
+  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Regular%20cuts/web%20files/SuisseIntl-Regular-Web/XL/SuisseIntl-Regular-WebXL.woff2")
+      format('woff2'),
+    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Regular%20cuts/web%20files/SuisseIntl-Regular-Web/XL/SuisseIntl-Regular-WebXL.woff")
+      format('woff');
   font-weight: 500;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 /* bold */
 
 @font-face {
   font-family: 'Suisse Intl';
-  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Bold%20cuts/web%20files/SuisseIntl-Bold-Web/S/SuisseIntl-Bold-WebS.woff2") format('woff2'),
-    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Bold%20cuts/web%20files/SuisseIntl-Bold-Web/S/SuisseIntl-Bold-WebS.woff") format('woff');
+  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Bold%20cuts/web%20files/SuisseIntl-Bold-Web/S/SuisseIntl-Bold-WebS.woff2")
+      format('woff2'),
+    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Bold%20cuts/web%20files/SuisseIntl-Bold-Web/S/SuisseIntl-Bold-WebS.woff")
+      format('woff');
   font-weight: 800;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 /* light */
 
 @font-face {
   font-family: 'Suisse Intl';
-  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Light%20cuts/web%20files/SuisseIntl-Light-Web/S/SuisseIntl-Light-WebS.woff2") format('woff2'),
-    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Light%20cuts/web%20files/SuisseIntl-Light-Web/S/SuisseIntl-Light-WebS.woff") format('woff');
+  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Light%20cuts/web%20files/SuisseIntl-Light-Web/S/SuisseIntl-Light-WebS.woff2")
+      format('woff2'),
+    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Light%20cuts/web%20files/SuisseIntl-Light-Web/S/SuisseIntl-Light-WebS.woff")
+      format('woff');
   font-weight: 200;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 /* condensed light */
 
 @font-face {
   font-family: 'Suisse Condensed';
-  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Condensed%20Light%20cuts/web%20files/SuisseIntlCond-Light-Web/S/SuisseIntlCond-Light-WebS.woff2") format('woff2'),
-    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Condensed%20Light%20cuts/web%20files/SuisseIntlCond-Light-Web/S/SuisseIntlCond-Light-WebS.woff") format('woff');
-  font-display: block;
-} 
+  src: url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Condensed%20Light%20cuts/web%20files/SuisseIntlCond-Light-Web/S/SuisseIntlCond-Light-WebS.woff2")
+      format('woff2'),
+    url("https://font-server-zwybshvnc.vercel.app/suisse-intl/Suisse%20Int'l%20Condensed%20Light%20cuts/web%20files/SuisseIntlCond-Light-Web/S/SuisseIntlCond-Light-WebS.woff")
+      format('woff');
+  font-display: swap;
+}
