--- a/src/markdown-pages/mark-kvetny/mandelbrot.css
+++ b/src/markdown-pages/mark-kvetny/mandelbrot.css
@@ -7,6 +7,7 @@
   border-color: rgba(226, 232, 240, var(--border-opacity));
   border-radius: 0.5rem;
   overflow: hidden;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 
 .mandelbrot .shader {
@@ -44,7 +45,7 @@
   }
 }
 
-.mandelbrot input {
+.mandelbrot input[type='number'] {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   -webkit-appearance: none;
   -moz-appearance: none;
